--- a/lang/gc-auth_en_US.yml
+++ b/lang/gc-auth_en_US.yml
@@ -1,9 +1,11 @@
-# 认证模块国际化信息 中文
+# 认证模块国际化信息 英文
 
 auth:
   error:
     usernamePasswordError: username or password error
     usernamePasswordEmpty: username and password can not empty
     tempToken:
-      empty: Temp Token validate fail，token is null
-
+      empty: Temp Token validate fail，token is empty
+      expire: Temp Token validate fail，token is expire
+      ipFail: Temp Token validate fail： IP validate fail, register IP：[{0}], request IP： [{1}]
+      resourceFail: 'Temp Token validate fail: resource validate fail, register resource:[{0}], request resource: [{1}]'
